--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,17 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+  <div class="big-card__photo">
+    <img src="{{ photoCover }}" alt="" height="200px" />
+  </div>
+  <div class="big-card__title">
+    <h1>
+      <a href="#">{{ cardTitle }}</a>
+    </h1>
+  </div>
+  <div class="big-card__description">
+    <p>
+      <a href="#">
+        {{ cardDescription }}
+      </a>
+    </p>
+  </div>
+</div>
