--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,13 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/assis-vasconcelos-90a2a2207/"
+        >Linkedin</a
+      >
+    </li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/AssisVasconcelos">Github</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://www.youtube.com/">Youtube</a></li>
+  </ul>
+</div>
