--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -17,7 +17,7 @@
 .small-card__title {
   display: flex;
   justify-content: center;
-  align-items: ;
+  align-items: center;
 }
 
 .container__small-card__separator {
