--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,27 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card
+      photoCover="https://colunaboraviajar.com.br/wp-content/uploads/2023/05/Cena-deletada-de-Iron-Man-e-tao-vergonhosa-que-nunca-sera-lancada-diz-produtor.jpg"
+      cardTitle="NOVO HOMEM DE FERRO ANUNCIADO"
+      cardDescription="Marvel studios anuncia novo filme do homem de ferro."
+    ></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card
+      cardTitle="Nova Série anunciada do Disney +"
+      photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+    >
+    </app-small-card>
+    <app-small-card
+      cardTitle="Novo filme do pantera negra lançado em breve"
+      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F6482D58C8BB4D899FA4682BF27652C3E1BB73F5971E5F963994112F26A73690/scale?width=1200&aspectRatio=1.78&format=jpeg"
+    >
+    </app-small-card>
+    <app-small-card
+      cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
+      photoCover="https://clubedovideogame.com.br/wp-content/uploads/2021/03/xmen-filme.jpg"
+    >
+    </app-small-card>
   </div>
 </div>
